feat(event): add pagination support to list events endpoint