@@ -1,15 +1,17 @@
 package br.com.carloslonghi.eventflow.api.infra.presentation;
 
 import br.com.carloslonghi.eventflow.api.core.domain.Event;
+import br.com.carloslonghi.eventflow.api.core.shared.PageResult;
 import br.com.carloslonghi.eventflow.api.core.usecases.CreateEventUseCase;
 import br.com.carloslonghi.eventflow.api.core.usecases.ListEventsUseCase;
 import br.com.carloslonghi.eventflow.api.infra.dtos.EventDto;
 import br.com.carloslonghi.eventflow.api.infra.mapper.EventDtoMapper;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.web.bind.annotation.*;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/event")
@@ -30,9 +32,13 @@ public class EventController {
     }
 
     @GetMapping
-    public List<EventDto> getAllEvents() {
-        return listEventsUseCase.execute().stream()
-                .map(eventDtoMapper::toDto)
-                .collect(Collectors.toList());
+    public Page<EventDto> listEvents(Pageable pageable) {
+        PageResult<Event> result = listEventsUseCase.execute(pageable.getPageNumber(), pageable.getPageSize());
+
+        return new PageImpl<>(
+                result.content().stream().map(eventDtoMapper::toDto).toList(),
+                PageRequest.of(result.pageNumber(), result.pageSize()),
+                result.totalElements()
+        );
     }
 }
